# frunk_utils

./: Cargo.toml
src/: cons_list.rs  lib.rs
src/futures/: for_each.rs  funcs.rs  hmappable.rs  map_to_list.rs  mod.rs
