[package]
name = "frunk_utils"
authors = ["David Spies <dnspies@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Utilities for working with frunk."
license = "MIT"
documentation = "https://docs.rs/frunk_utils"
repository = "https://github.com/davidspies/frunk_utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frunk = "0.4"
